# XidianGymAppointmentTool

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.py
API/: Badmintion.json
API/Badminiton/: API.py  CheckStatus.json  GetFieldType.json  GetOrderInfo.json  GetVenue.json  GetVenueStateNew.json  GetWeek.json  OrderField.json  order_request.py
API/Order/: API.py  GetOrderField.json
API/User/: API.py  GetUserInfo.json
config/: app_config.py  credentials.json  credentials_config.py  env_keys.py
core/: firebase_manager.py  schedule_task.py  sqlite_manager.py
firebase/: .gitignore  docker-compose.yml
gui/: badminton_booking_page.py  basketball_booking_page.py  dialogs.py  fitness_booking_page.py  login_page.py  main_window.py  main_windows.py  pingpong_booking_page.py  styles.py  task_management_page.py  threads.py  widgets.py
gui/booking_page/: badminton_booking_page.py  pingpong_booking_page.py
sqlite/: DockerFile  docker-compose.yml  setup_dbs.sh
test/: main.py
tools/: email_sender.py  gui_logger.py  logger.py  request_b.py  token_util.py
